# pychord

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  README.md  README.rst  VERSIONS.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  codeql-analysis.yml  deploy.yml
docs/: Makefile  conf.py  index.rst  pychord.constants.rst  pychord.rst  requirements.txt
examples/: pychord-midi.py
pychord/: __init__.py  analyzer.py  chord.py  parser.py  progression.py  pychord.py  qualities.py  quality.py  quality_list.py  utils.py
pychord/constants/: __init__.py  qualities.py  scales.py
test/: chord_test.py  components_test.py  test_analyzer.py  test_chord.py  test_component.py  test_constants.py  test_parser.py  test_progression.py  test_quality.py  test_transpose.py  test_utils.py  transpose_test.py
