[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pychord"
version = "1.3.2"
description = "Package to handle musical chords"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Yuma Mihira", email = "info@yuma.cloud"},
]
keywords = ["music", "chord"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/yuma-m/pychord"

[project.optional-dependencies]
test = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "parameterized>=0.8.0",
]

[tool.coverage.run]
include = ["pychord/*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test", "docs"]
